2011-02-08  Jia Pu  <jpu@apple.com>

Reviewed by Darin Adler.

        VisibleSelection::setWithoutValidation() should allow caret selection.
        https://bugs.webkit.org/show_bug.cgi?id=53943

        * editing/undo/undo-paste-when-caret-is-not-in-range-expected.txt: Added.
        * editing/undo/undo-paste-when-caret-is-not-in-range.html: Added.
2011-02-08  Jia Pu  <jpu@apple.com>

        Reviewed by Darin Adler.

        VisibleSelection::setWithoutValidation() should allow caret selection.
        https://bugs.webkit.org/show_bug.cgi?id=53943

        Test: editing/undo/undo-paste-when-caret-is-not-in-range.html

        * editing/VisibleSelection.cpp:
        (WebCore::VisibleSelection::setWithoutValidation):

Canonical link: https://commits.webkit.org/68054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77995 268f45cc-cd09-0410-ab3c-d52691b4dbfc